<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BMI-calc</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="submit">Submit</string>

    <string name="kg">kg</string>
    <string name="feet">feet</string>
    <string name="inches">inches</string>
    <string name="height">Enter your height</string>
    <string name="weight">Enter your weight</string>
    <string name="bmi">Your BMI is </string>
    <string name="lbs">lbs</string>

</resources>